--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -1,23 +1,18 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!-- 
-/*
- * Copyright (C) 2007-2008 Esmertec AG.
- * Copyright (C) 2007-2008 The Android Open Source Project
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *      http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
- -->
+<?xml version="1.0" encoding="utf-8"?>
+<!--  Copyright (C) 2012 The CyanogenMod Project
 
+     Licensed under the Apache License, Version 2.0 (the "License");
+     you may not use this file except in compliance with the License.
+     You may obtain a copy of the License at
+
+          http://www.apache.org/licenses/LICENSE-2.0
+
+     Unless required by applicable law or agreed to in writing, software
+     distributed under the License is distributed on an "AS IS" BASIS,
+     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+     See the License for the specific language governing permissions and
+     limitations under the License.
+ -->
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="app_label" msgid="1503967887341230795">"Berichten"</string>
@@ -31,15 +26,15 @@
     <string name="menu_search" msgid="2289469305728821360">"Zoeken"</string>
     <string name="menu_delete_all" msgid="808729454898114735">"Alle threads verwijderen"</string>
     <string name="menu_delete" msgid="1851666911396479006">"Thread verwijderen"</string>
-    <string name="menu_view" msgid="7448852683948080108">"Thread weergeven"</string>
+    <string name="menu_view" msgid="7448852683948080108">"Thread tonen"</string>
     <string name="menu_debug_dump" msgid="6855869130206549643">"DEBUG-DUMP"</string>
-    <string name="refreshing" msgid="987335057871404222">"Vernieuwen..."</string>
+    <string name="refreshing" msgid="987335057871404222">"Vernieuwen\u2026"</string>
     <string name="has_draft" msgid="2487465595514636160">"Concept"</string>
     <string name="no_subject_view" msgid="7795086723069563537">"(Geen onderwerp)"</string>
     <string name="messagelist_sender_self" msgid="3579016854116401602">"Ik"</string>
-    <string name="view_slideshow" msgid="4990460971211388453">"Diavoorstelling weergeven"</string>
-    <string name="view_message_details" msgid="7613457646645796831">"Details weergeven"</string>
-    <string name="view_delivery_report" msgid="8219095994071575215">"Rapport weergeven"</string>
+    <string name="view_slideshow" msgid="4990460971211388453">"Diavoorstelling tonen"</string>
+    <string name="view_message_details" msgid="7613457646645796831">"Details tonen"</string>
+    <string name="view_delivery_report" msgid="8219095994071575215">"Rapport tonen"</string>
     <string name="delete_message" msgid="6442394955910357234">"Verwijderen"</string>
     <string name="expire_on" msgid="4436268382742593921">"Verloopt op: <xliff:g id="DATE">%s</xliff:g>"</string>
     <string name="kilobyte" msgid="534782148965716631">"kB"</string>
@@ -75,7 +70,7 @@
     <string name="add_attachment" msgid="7103751293360532684">"Bijvoegen"</string>
     <string name="add_subject" msgid="7616134948428265870">"Onderwerp toevoegen"</string>
     <string name="discard" msgid="1624800293064498479">"Weggooien"</string>
-    <string name="view" msgid="7929667761715467136">"Weergeven"</string>
+    <string name="view" msgid="7929667761715467136">"Tonen"</string>
     <string name="replace" msgid="7587904998114459388">"Vervangen"</string>
     <string name="remove" msgid="4625444913256213175">"Verwijderen"</string>
     <string name="send" msgid="4589898724889248486">"Verzenden"</string>
@@ -83,7 +78,7 @@
     <string name="all_threads" msgid="2663426830306307194">"Alle threads"</string>
     <string name="type_to_compose_text_enter_to_send" msgid="3539985471008581265">"Typ een bericht"</string>
     <string name="open_keyboard_to_compose_message" msgid="7860109685511253191">"Open het toetsenbord om een bericht te typen"</string>
-    <string name="compressing" msgid="1961357529661045180">"Afbeelding te groot. Comprimeren..."</string>
+    <string name="compressing" msgid="1961357529661045180">"Afbeelding te groot. Comprimeren\u2026"</string>
     <string name="unsupported_media_format" msgid="1350489690977363764">"Niet-ondersteunde <xliff:g id="NAME">%1$s</xliff:g>-indeling."</string>
     <string name="select_different_media" msgid="6241623357299382183">"Selecteer een andere <xliff:g id="NAME">%1$s</xliff:g>."</string>
     <string name="exceed_message_size_limitation" msgid="6027753647094742437">"Limiet berichtgrootte bereikt."</string>
@@ -103,8 +98,8 @@
     <string name="cannot_send_message" msgid="3414307479833622644">"Kan bericht niet verzenden"</string>
     <string name="cannot_send_message_reason" msgid="8745080126044054343">"Uw bericht heeft geen geldige ontvangers."</string>
     <string name="cannot_forward_drm_obj" msgid="5047623751430559077">"Het DRM-object in het bericht kan niet worden doorgestuurd."</string>
-    <string name="converting_to_picture_message" msgid="2980023239017588627">"Converteren naar MMS-bericht..."</string>
-    <string name="converting_to_text_message" msgid="6374423235426015422">"Converteren naar sms..."</string>
+    <string name="converting_to_picture_message" msgid="2980023239017588627">"Converteren naar MMS-bericht\u2026"</string>
+    <string name="converting_to_text_message" msgid="6374423235426015422">"Converteren naar sms\u2026"</string>
     <string name="cannot_add_slide_anymore" msgid="4631404749618820994">"Kan niet meer dia\'s toevoegen."</string>
     <string name="cannot_add_picture_and_video" msgid="4954353772391381447">"Kan video en afbeelding niet toevoegen aan één dia."</string>
     <string name="cannot_save_message" msgid="3375907366965264446">"Kan bericht niet opslaan."</string>
@@ -139,7 +134,7 @@
     <item msgid="2618179407176906471">"10 seconden"</item>
     <item msgid="7786079681602275449">"Overig"</item>
   </string-array>
-    <string name="menu_view_contact" msgid="1414670584423909451">"Contact weergeven"</string>
+    <string name="menu_view_contact" msgid="1414670584423909451">"Contact tonen"</string>
     <string name="menu_add_to_contacts" msgid="1258127580972228970">"Toevoegen aan Personen"</string>
     <string name="hidden_sender_address" msgid="2776075636669924968">"Verborgen adres verzender"</string>
     <string name="yes" msgid="3246158147503160811">"OK"</string>
@@ -168,7 +163,7 @@
     <string name="pref_title_sms_delete" msgid="6890538316799296878">"Limiet voor sms"</string>
     <string name="pref_title_mms_delete" msgid="7265878070847351664">"Limiet voor MMS"</string>
     <string name="pref_title_notification_enabled" msgid="9118792213953729414">"Meldingen"</string>
-    <string name="pref_summary_notification_enabled" msgid="619729096820999905">"Berichtmeldingen in statusbalk weergeven"</string>
+    <string name="pref_summary_notification_enabled" msgid="619729096820999905">"Berichtmeldingen in statusbalk tonen"</string>
     <string name="pref_title_notification_vibrateWhen" msgid="4251208067092761057">"Trillen"</string>
     <string name="pref_summary_notification_vibrateWhen" msgid="669655090822561447">"Ook trillen bij melding"</string>
     <string name="pref_title_notification_ringtone" msgid="5467265237106229952">"Beltoon kiezen"</string>
@@ -227,7 +222,7 @@
     <string name="sim_copy_to_phone_memory" product="default" msgid="5895767417844881971">"Kopiëren naar telefoongeheugen"</string>
     <string name="sim_delete" msgid="610790510655316922">"Verwijderen"</string>
     <string name="sim_manage_messages_title" msgid="3989147182100584333">"Sms-berichten op SIM-kaart"</string>
-    <string name="sim_view" msgid="1997173541766393706">"Weergeven"</string>
+    <string name="sim_view" msgid="1997173541766393706">"Tonen"</string>
     <string name="sim_empty" msgid="2356766833071636297">"Geen berichten op simkaart."</string>
     <string name="delivery_header_title" msgid="5361719578869045764">"Rapport"</string>
     <string name="status_none" msgid="8253075950774894961">"(Geen)"</string>
@@ -328,4 +323,40 @@
     <item quantity="other" msgid="7338580381574463136">"<xliff:g id="NUMBER">%1$s</xliff:g> personen"</item>
   </plurals>
     <string name="disable_notifications_dialog_message" msgid="7644011234972074096">"Dubbele sms-meldingen van standaardapp voor berichten stoppen?"</string>
+
+    <!-- CYANOGENMOD EDITS -->
+
+    <string-array name="pref_templates_gestures_sensitivity_entries">
+    <string name="pref_title_sms_split_160">Sms splitsen</string>
+    <string name="pref_summary_sms_split_160">Splits bericht elke 160 karakters</string>
+    <string name="pref_title_sms_split_counter">Splitteller</string>
+    <string name="pref_summary_sms_split_counter">Voeg teller toe aan berichten, zoals: (1/2)</string>
+    <string name="prefs_templates_settings">Sms-sjablonen</string>
+    <string name="pref_title_templates_manage">Sjablonen</string>
+    <string name="pref_summary_templates_manage">Beheer sms-sjablonen</string>
+    <string name="pref_title_templates_show_gesture">Gebaar</string>
+    <string name="pref_summary_templates_show_gesture">Toon gebarenpad</string>
+    <string name="pref_title_template_gestures_sensitivity">Gebarengevoeligheid</string>
+    <string name="template_save">Opslaan</string>
+    <string name="template_insert_hint">Voer hier de sjabloontekst in</string>
+    <string name="template_empty_text">Tekstveld kan niet leeg zijn</string>
+    <string name="template_explanation">Maak/bewerk een sjabloon en teken evt. een gebaar om hieraan toe te wijzen.</string>
+    <string name="template_edit">Bewerken</string>
+    <string name="template_delete">Verwijderen</string>
+    <string name="template_ctx_menu_title">Acties</string>
+    <string name="template_list_title">Sjablonen</string>
+    <string name="template_new_title">Nieuw sjabloon</string>
+    <string name="template_insert">Voer sjabloon in</string>
+    <string name="template_gesture_draw">Teken gebaar in onderstaande ruimte</string>
+    <string name="template_not_present_error">U heeft nog geen sjabloon</string>
+    <string name="template_not_present_error_title">Fout</string>
+    <string name="template_select">Selecteer een sjabloon</string>
+    <string name="template_cancel_confirm_title">Waarschuwing</string>
+    <string name="template_cancel_confirm_text">Wilt u annuleren?</string>
+    <string name="gestures_already_present">Waarschuwing: een soortgelijk gebaar is al toegewezen aan een ander sjabloon.</string>
+    <string name="pref_extra_settings">Extra instellingen</string>
+    <string name="pref_title_mms_full_timestamp">Volledige tijdsaanduiding</string>
+    <string name="pref_summary_mms_full_timestamp">Toon datum en tijd in tijdsaanduidingen</string>
+    <string name="pref_title_mms_use_sent_timestamp">Oorspronkelijke tijdsaanduiding</string>
+    <string name="pref_summary_mms_use_sent_timestamp">Toon zenddatum i.p.v. aankomstdatum in tijdsaanduidingen</string>
 </resources>
