--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -354,4 +354,29 @@
     <string name="template_cancel_confirm_title">Warning</string>
     <string name="template_cancel_confirm_text">Vuoi davvero cancellare questo modello?</string>
     <string name="gestures_already_present">Attenzione! Una gesture simile è associata ad un altro template</string>
+    
+    <!-- Extra Settings: -->
+    <string name="pref_extra_settings">Impostazioni Extra</string>
+
+    <!-- Strip unicode -->
+    <string name="pref_title_strip_unicode">Rimuovi unicode</string>
+    <string name="pref_summary_strip_unicode">Sostituisci i caratteri comuni che non sono supportati nei messaggi SMS a 160 caratteri</string>
+    <!-- Enable emojis -->
+    <string name="pref_title_enable_emojis">Attiva emojis</string>
+    <string name="pref_summary_enable_emojis"> Attiva il supporto per softbank unicode emojis, un set di 471 emoticons carine</string>
+    <!-- Full timestamps -->
+    <string name="pref_title_mms_full_timestamp">Timestamp Interi</string>
+    <string name="pref_summary_mms_full_timestamp">Mostra sia la data che l\'ora nei timestamp</string>
+    <!-- Which timestamps -->
+    <string name="pref_title_mms_use_sent_timestamp">Timestamp originali</string>
+    <string name="pref_summary_mms_use_sent_timestamp">Mostra la data di invio anzichè quella di ricezione nei timestamp</string>
+    
+    <!-- Change Vibrate pattern/method for message notification -->
+    <string name="pref_title_mms_notification_vibrate_settings">Impostazioni Vibrazione</string>
+    <string name="pref_title_mms_notification_vibrate_pattern">Pattern vibrazione</string>
+    <string name="pref_summary_mms_notification_vibrate_pattern">Cambia il pattern di vibrazione</string>
+    <string name="pref_title_mms_notification_vibrate_call">Vibra alla Chiamata</string>
+    <string name="pref_summary_mms_notification_vibrate_call">Permetti la vibrazione durante la chiamata</string>
+    <string name="pref_title_mms_notification_vibrate_custom">Pattern di vibrazione personalizzato</string>
+    <string name="pref_text_mms_notification_vibrate_custom">Formato off/on in millisecondi: off, on, off, on, ...</string>
 </resources>
