--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -173,6 +173,8 @@
     <string name="pref_summary_notification_vibrateWhen" msgid="669655090822561447">"Attiva anche vibrazione alla notifica"</string>
     <string name="pref_title_notification_ringtone" msgid="5467265237106229952">"Scegli suoneria"</string>
     <string name="pref_messages_to_save" msgid="3202539743892934926">"Imposta numero di messaggi da salvare"</string>
+    <string name="pref_title_sms_split_counter">Contatore SMS</string>
+    <string name="pref_summary_sms_split_counter">Indica quanti SMS compongono il messaggio</string>
   <string-array name="prefEntries_vibrateWhen">
     <item msgid="2520871831815631409">"Sempre"</item>
     <item msgid="6069709696037750627">"Solo in modalità silenziosa"</item>
@@ -283,6 +285,7 @@
     <string name="saved_ringtone" msgid="3847363932276708626">"Suoneria salvata."</string>
     <string name="saved_ringtone_fail" msgid="4778500070919251116">"Salvataggio suoneria non riuscito."</string>
     <string name="menu_insert_smiley" msgid="4964504393061025071">"Inserisci emoticon"</string>
+	<string name="menu_insert_emoji">Inserisci emoji</string>
     <string name="select_link_title" msgid="3371818607625768447">"Scegli azione"</string>
     <string name="slide_number" msgid="1923958526266726635">"Diapositiva <xliff:g id="NUMBER">%s</xliff:g>"</string>
   <plurals name="slide_duration">
@@ -339,8 +342,7 @@
     <string name="template_save">Salva</string>
     <string name="template_insert_hint">Inserisci qui il testo del modello</string>
     <string name="template_empty_text">Il testo non può essere vuoto</string>
-    <string name="template_explanation">Inserisci o modifica il testo del modello e,
-        opzionalmente, disegna una gesture a cui associarlo</string>
+    <string name="template_explanation">Inserisci o modifica il testo del modello e, opzionalmente, disegna una gesture a cui associarlo</string>
     <string name="template_edit">Modifica</string>
     <string name="template_delete">Elimina</string>
     <string name="template_ctx_menu_title">Azioni</string>
@@ -354,4 +356,20 @@
     <string name="template_cancel_confirm_title">Warning</string>
     <string name="template_cancel_confirm_text">Vuoi davvero cancellare questo modello?</string>
     <string name="gestures_already_present">Attenzione! Una gesture simile è associata ad un altro template</string>
+    <string name="pref_extra_settings">Impostazioni aggiuntive</string>
+    <string name="pref_title_strip_unicode">Sostituisci unicode</string>
+    <string name="pref_summary_strip_unicode">Sostituisci i caratteri comuni non supportati negli SMS di 160 caratteri</string>
+    <string name="pref_title_enable_emojis">Abilita emojis</string>
+    <string name="pref_summary_enable_emojis">Abilita supporto per le emojis unicode di softbank, una serie di 471 emoticons</string>
+    <string name="pref_title_mms_full_timestamp">Timestamp completi</string>
+    <string name="pref_summary_mms_full_timestamp">Visualizza data e ora nei timestamp</string>
+    <string name="pref_title_mms_use_sent_timestamp">Timestamp originali</string>
+    <string name="pref_summary_mms_use_sent_timestamp">Visualizza la data di invio, non quella di ricezione</string>
+    <string name="pref_title_mms_notification_vibrate_settings">Impostazioni vibrazione</string>
+    <string name="pref_title_mms_notification_vibrate_pattern">Schema vibrazione</string>
+    <string name="pref_summary_mms_notification_vibrate_pattern">Cambia schema di vibrazione</string>
+    <string name="pref_title_mms_notification_vibrate_call">Vibrazione in chiamate</string>
+    <string name="pref_summary_mms_notification_vibrate_call">Permetti la vibrazione durante una chiamata</string>
+    <string name="pref_title_mms_notification_vibrate_custom">Schema di vibrazione personalizzato</string>
+    <string name="pref_text_mms_notification_vibrate_custom">Formatta off/on in millisecondi: off, on, off, on, ...</string>
 </resources>
